--- a/style.css
+++ b/style.css
@@ -1,329 +1,158 @@
+@media (prefers-reduced-motion: no-preference) {
+    * {
+      scroll-behavior: smooth;
+    }
+  }
+main{
+    padding-top: 30px;
+}
 body {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background: #f5f6f7;
+    color: #1b1b32;
+    font-family: Helvetica;
+    margin: 0;
+  }
+#logo{
+    width: max(100px, 18vw);
+ background-color: #0a0a23;
+ aspect-ratio: 35/4;
+ padding: 0.4rem;
 }
-
-/* Navigation Bar */
-
-#home {
-  background-color:  #7600bc;
-  padding-bottom: 1cm;
-  margin-left:-1cm;
-  margin-right:-1cm;
-  margin-top:-1cm;
-  padding-top: 2cm;
-  padding-bottom: 2cm;
-  height: 5mm;
- }
-
-.topmenu {
-  color: #fff;
-  margin: 10px;
-  padding: 20px;
-  font-size: 20px;
-  text-decoration:none;
+header {
+    width: 100%;
+    height: 50px;
+    background-color: #1b1b32;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
+  }
+  
+h1{
+    color: #f1be32;
+    font-size: min(5vw,1.2em);
+   text-align: center;
 }
-
-.topmenu:hover {
-  color: white;
-  /* Add the styles here */
+nav {
+    width: 50%;
+    max-width: 300px;
+    height: 50px;
 }
-
-.topdiv {
-  float: right;
-  padding-right: 1cm;
+nav > ul{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+padding-inline-start: 0;
+margin-block: 0;
+height: 100%;
 }
-
-.profile_name {
-  font-size: 25px;
-  float: left;
-  padding-left: 2cm;
-  color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
-  /* Add the styles here */
+nav > ul > li{
+    color: #dfdfe2;
+    margin: 0 0.2rem;
+    padding: 0.2rem;
+    display: block;
 }
-
-.profile_name .contact_info {
-  font-size: 20px;
-  font-style: italic;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
+h1,h2{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
-.contact_info img {
-  width:25px;
-  margin-right: 10px;
-  float:left;
+h2{
+    border-bottom: 4px solid #dfdfe2;
+    padding-top: 60px;
+    margin-top: 0px;
 }
-
-/* Titles */
-
-h2 {
-  text-align: justify;
-  font-size: 50px;
-  text-align: center;
-  float: left;
-  color: #7600bc;
-  margin: 30px;
-  margin-left: 60px;
-  margin-top: 40px;
-  margin-bottom: 0px;
+.sr-only{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
 }
-
-.introduction {
-  text-align: justify;
-  font-size: 30px;
-  text-align: center;
-  float: left;
-  margin-top: 30px;
-  margin-bottom: 20px;
-  animation-duration: 5s;
-  position: relative;
+p::before{
+    content: "Question #";
 }
-
-/* Used in the About Me sections */
-
-.container {
-  display: flex;
+li > a {
+    color: inherit;
+    text-decoration: none;
+  }
+nav > ul > li:hover{
+background-color: #dfdfe2;
+color: #1b1b32;
+cursor: pointer;
 }
-
-/* About Me */
-
-.about-me {
-  display: flex;
-  align-items: center;
+section{
+    width: 80%;
+    margin-bottom: 10px;
+    margin-top: 0;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 600px;
 }
-
-#about-me h1 {
-  font-size: 65px;
-  margin-top: 90px;
-  color: #7600bc;
+footer{
+background-color: #2a2a40;
+display: flex;
+justify-content: center;
+color: #dfdfe2;
+padding: 5px;
+text-align: center;
 }
-
-#about-me p {
-  font-size: 25px;
-  color: rgb(128, 128, 128);
-  margin-top: -1cm;
+footer > address > a{
+    color: #dfdfe2;
 }
-
-.profile_image {
-  width: 550px;
-  height: fit-content;
-  vertical-align: middle;
-  margin: 5px;
+.info {
+    padding: 10px 0 0 5px;
+  }
+  .formrow {
+    margin-top: 30px;
+    padding: 0px 15px;
+  }
+  input {
+    font-size: 16px;
+  }
+.info input{
+    width: 50%;
+    text-align: left;
 }
-
-/* Skills */
-
-.all_skills {
-  display: flex;
-  flex-direction: row;
-  flex-flow: wrap;
+.info label{
+    width: 10%;
+    min-width: 55px;
+    text-align: right;
 }
+.info > label, .info > input{
+    display: inline-block;
 
-.skill {
-  border: 1px solid gray;
-  display: block;
-  border-radius: 6px;
-  text-align: center;
-  margin: 50px;
-  padding: 10px;
-  width: 2in;
-  font-size: 20px;
-  box-shadow: 0 3px 10px gray;
 }
-
-.skill img {
-  height: 35px;
-  align-items: center;
+.question-block{
+    text-align: left;
+display: block;
+width: 100%;
+margin-top: 20px;
+padding-top: 5px;
 }
-
-.skills h6 {
-  align-items: center;
-  font-size: 20px;
-  margin-block-start: 8px;
-  margin-block-end: 5px;
-  font-weight: bold;
-} 
-
-.skills p {
-  align-items: center;
-  font-size: 15px;
-  color: gray;
-  margin-block-start: 5px;
-  margin-block-end: 5px;
-} 
-
-.flex_center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+p{
+    margin-top: 5px;
+padding-left: 15px;
+font-size: 20px;
 }
-
-/* Projects */
-
-.projects-container {
-  margin-top: 30px;
-  margin-left: 60px;
+.question{
+    border: none;
+    padding-bottom: 0px;
 }
-
-.projects-container hr {
-  border: 1px solid lightgray;
-  width: 75%;
-  margin-left: 5cm;
-}
-
-.project-card {
-  margin: 0 15px 15px 30px;
-  padding-bottom: 5px;
-}
-
-.project-card h3 {
-  font-size: 25px;
-  margin-left: 30px;
-}
-
-.project-card li {
-  font-size: 20px;
-  margin-left: 30px;
-}
-
-/* Recommendations */
-
-.all_recommendations {
-  display: flex;
-  align-items: center;
-  margin-left: 1in;
-  flex-direction: row;
-  flex-flow: wrap;
-  padding: 20px;
-}
-
-.recommendation {
-  font-style: italic;
-  text-align: left;
-  width: 21.875rem;
-  padding: 1rem;
-  background-color: #fff;
-  border-radius: 11px;
-  box-shadow: 0 3px 10px var(--primary-shadow);
-  padding: 20px;
-  margin: 10px;
-  border:1px solid gray;
-  font-size: 18px;
-  height:150px
-}
-
-.recommendation span {
-  color: #7600bc;
-  font-size: 20px;
-  font-family: 'Times New Roman', Times, serif;
-}
-
-/* Scroll to Top Button */
-
-.iconbutton{
-  width: 48px;
-  height: 48px;
-  border-radius: 100%;
-  background-color: #7600bc;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  right: 3%;
-  bottom: 3%;
-  cursor: pointer;
-}
-
-/* Form Pop-up */
-
-.popup {
-  width:400px;
-  background-color: #e8bcf0;
-  border-radius: 3mm;
-  top: 50%;
-  left:50%;
-  transform: translate(-50%,-50%);
-  text-align: center;
-  position: fixed;
-  /* padding: 30px; */
-  visibility: hidden;
-}
-
-.popup img {
-  padding-top: 20px;
-}
-
-.popup button {
-  background-color: #fff;
-  border: 1px solid #7600bc;
-  color: #7600bc;
-  display: block;
-  border-radius: 6px;
-  text-align: center;
-  margin: 50px;
-  padding: 10px;
-  width: 2in;
-  font-size: 20px;
-  margin-left: 25%;
-}
-
-.popup button:hover {
-  background-color: #fff;
-  border: 2px solid #7600bc;
-  color: #7600bc;
-  display: block;
-  font-weight: bolder;
-  text-align: center;
-  cursor: pointer;
-  margin-left: 25%;
-}
-
-/* Recommendation Form */
-
-input, textarea {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
-  margin: 10px;  
-  width:100%;
-}
-
-fieldset {
-  display: flexbox;
-  align-content: center;
-  justify-content: center;  
-  padding: 25px; 
-  margin-left: 50px; 
-  margin-right: 50px;   
-  border: thin solid white;
-  width: 50%;
-}
-
-/* Buttons */
-
-button {
-  background-color: #fff;
-  border: 1px solid #7600bc;
-  color: #7600bc;
-  display: block;
-  border-radius: 6px;
-  text-align: center;
-  margin: 50px;
-  padding: 10px;
-  width: 2in;
-  font-size: 20px;
-}
-
-button:hover {
-  background-color: #7600bc;
-  border: 1px solid #7600bc;
-  color: #fff;
-  display: block;
-  border-radius: 6px;
-  text-align: center;
-  cursor: pointer;
-}
-.topmenu:hover{
-font-weight: bolder;
-text-decoration: underline;
-}
+.answers-list {
+    list-style: none;
+    padding: 0px;
+  }
+  button{
+    display: block;
+margin: 40px auto;
+width: 40%;
+padding: 15px;
+font-size: 23px;
+background: #d0d0d5;
+border: 3px solid #3b3b4f;
+  }
